--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -2086,7 +2086,7 @@ let longitude = 16.60062;
 let latitude =49.19177;
 let radius = 200;
 
-async function getClosestStopsAndDepartures(longitude, latitude, radius) {
+async function getStop(longitude, latitude, radius) {
   const apiKey = &#39;gYW4HBUHK9kB5j8wDxwxGglMKrWl9P9J&#39;;
 
   try {
@@ -2127,25 +2127,20 @@ async function getClosestStopsAndDepartures(longitude, latitude, radius) {
     const firstDeparture = departures[0];
     tripHeadSign = firstDeparture.trip.trip_headsign;
     routeShortName = firstDeparture.trip.route.route_short_name;
-    const scheduledDepartureTimeString = firstDeparture.departure.scheduled;
-    console.log(&quot;Scheduled Departure Time String:&quot;, scheduledDepartureTimeString);
-    const scheduledDepartureTime = new Date(scheduledDepartureTimeString).getTime();
-    console.log(&quot;Scheduled Departure Time:&quot;, scheduledDepartureTime);
-    const currentTime = new Date().getTime();
-    minutesUntilDeparture = Math.round((scheduledDepartureTime - currentTime) / (1000 * 60));
+    departureTime = firstDeparture.departure.scheduled;
     stopName = firstStopWithType0.stop_name;
 
     // Log departure information
     console.log(&quot;Trip Head Sign:&quot;, tripHeadSign);
     console.log(&quot;Route Short Name:&quot;, routeShortName);
-    console.log(&quot;Departure in minutes:&quot;, minutesUntilDeparture);
+    console.log(&quot;Departure Time:&quot;, departureTime);
     console.log(&quot;Stop Name:&quot;, stopName);
 
     // You can return departure information if you want to do something with it outside this function
     return {
       tripHeadSign,
       routeShortName,
-      minutesUntilDeparture,
+      departureTime,
       stopName
     };
   } catch (error) {
@@ -2155,7 +2150,7 @@ async function getClosestStopsAndDepartures(longitude, latitude, radius) {
   }
 }
 
-getClosestStopsAndDepartures(longitude, latitude, radius)
+getStop(longitude, latitude, radius)
 
 &lt;&lt;/script&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
