--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -932,7 +932,7 @@ Promise.all([
   console.log(&quot;Hachi walking speed is: &quot; + variables().hachi_speed);
   console.log(&quot;Avatar closest amenity is: &quot; + variables().avatar_amenity);
   console.log(&quot;Hachi closest amenity is: &quot; + variables().hachi_amenity);
-  console.log(&quot;Avatar closest stop is: &quot; + variables().avatar_stop);
+  console.log(&quot;Avatar closest stop is: &quot; + avatarStop);
 })
 .catch((error) =&gt; {
   console.error(&quot;Error:&quot;, error.message);
