--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -898,12 +898,12 @@ Loading variables...
 &lt;&lt;set $hachi_walking_speed to &#39;&#39;&gt;&gt;
 &lt;&lt;set $hachi_amenity to &#39;&#39;&gt;&gt;
 &lt;&lt;set $avatar_amenity to &#39;&#39;&gt;&gt;
-&lt;&lt;set $hachi_stop to &#39;&#39;&gt;&gt;
-&lt;&lt;set $avatar_stop to &#39;&#39;&gt;&gt;
-&lt;&lt;set $hachi_heading to &#39;&#39;&gt;&gt;
-&lt;&lt;set $avatar_heading to &#39;&#39;&gt;&gt;
-&lt;&lt;set $hachi_route to &#39;&#39;&gt;&gt;
-&lt;&lt;set $avatar_route to &#39;&#39;&gt;&gt;
+&lt;&lt;set $hachi_t_stop to &#39;&#39;&gt;&gt;
+&lt;&lt;set $avatar_t_stop to &#39;&#39;&gt;&gt;
+&lt;&lt;set $hachi_t_heading to &#39;&#39;&gt;&gt;
+&lt;&lt;set $avatar_t_heading to &#39;&#39;&gt;&gt;
+&lt;&lt;set $hachi_t_route to &#39;&#39;&gt;&gt;
+&lt;&lt;set $avatar_t_route to &#39;&#39;&gt;&gt;
 
 &lt;&lt;repeat 20000ms&gt;&gt;
 &lt;&lt;script&gt;&gt;
@@ -939,9 +939,9 @@ Promise.all([
   console.log(&quot;Avatar closest stop is: &quot; + avatarStop.stopName);
   console.log(&quot;Avatar heading: &quot; + avatarStop.tripHeadSign);
   console.log(&quot;Avatar route: &quot; + avatarStop.routeShortName);
-  console.log(&quot;Avatar closest stop is: &quot; + variables().avatar_stop);
-  console.log(&quot;Avatar heading: &quot; +  variables().avatar_heading);
-  console.log(&quot;Avatar route: &quot; + variables().avatar_route);
+  console.log(&quot;Avatar closest stop is: &quot; + variables().avatar_t_stop);
+  console.log(&quot;Avatar heading: &quot; +  variables().avatar_t_heading);
+  console.log(&quot;Avatar route: &quot; + variables().avatar_t_route);
 })
 .catch((error) =&gt; {
   console.error(&quot;Error:&quot;, error.message);
@@ -2122,9 +2122,9 @@ console.log(variables().hachi_comment);
 &lt;&lt;/liveblock&gt;&gt;
 
 &lt;&lt;/nobr&gt;&gt;</tw-passagedata><tw-passagedata pid="71" name="empty" tags="" position="450,1150" size="100,100">EMPTY</tw-passagedata><tw-passagedata pid="72" name="commentMovement_hachi" tags="" position="1050,200" size="200,100"> &lt;&lt;if typeof _prevhachiMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevhachiMovement to $hachi_movement&gt;&gt;&lt;&lt;elseif _prevhachiMovement !== $hachi_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;hachi&#39;, &#39;notmoving&#39;); console.log(variables().hachi_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevhachiMovement to variables().hachi_movement&gt;&gt;&lt;&lt;if $hachi_comment !== _prevhachiComment&gt;&gt;&lt;&lt;set _prevhachiComment to $hachi_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().hachi_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().hachi_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $hachi_passage to variables().hachi_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="73" name="commentMovement_avatar" tags="" position="1275,200" size="200,100">&lt;&lt;if typeof _prevavatarMovement === &#39;undefined&#39;&gt;&gt;&lt;&lt;set _prevavatarMovement to $avatar_movement&gt;&gt;&lt;&lt;elseif _prevavatarMovement !== $avatar_movement&gt;&gt;&lt;&lt;script&gt;&gt;makeShortComments(&#39;avatar&#39;, &#39;notmoving&#39;); console.log(variables().avatar_comment); &lt;&lt;/script&gt;&gt;&lt;&lt;set _prevavatarMovement to variables().avatar_movement&gt;&gt;&lt;&lt;if $avatar_comment !== _prevavatarComment&gt;&gt;&lt;&lt;set _prevavatarComment to $avatar_comment&gt;&gt;&lt;&lt;script&gt;&gt;var passage_temp = variables().avatar_comment;const renderedText = $((document).createDocumentFragment()).wiki(passage_temp).text();console.log(renderedText);variables().avatar_passage = renderedText;&lt;&lt;/script&gt;&gt;&lt;&lt;set $avatar_passage to variables().avatar_passage&gt;&gt;&lt;&lt;/if&gt;&gt;&lt;&lt;/if&gt;&gt;</tw-passagedata><tw-passagedata pid="74" name="stops" tags="" position="300,1275" size="100,100">&lt;&lt;liveblock&gt;&gt;
-$avatar_heading
-$avatar_route
-$avatar_stop 
+$avatar__t_heading
+$avatar_t_route
+$avatar_t_stop 
 &lt;&lt;/liveblock&gt;&gt;</tw-passagedata></tw-storydata>
 	<script id="script-sugarcube" type="text/javascript">
 	/*! SugarCube JS */
