--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -927,21 +927,18 @@ Promise.all([
   variables().hachi_walking_speed = hachiSpeed;
   variables().avatar_amenity = avatarAmenity;
   variables().hachi_amenity = hachiAmenity;
-  variables().avatar_stop=avatarStop.stopName;
-  variables().avatar_route=avatarStop.routeShortName;
-  variables().avatar_heading=avatarStop.tripHeadSign;
+  variables().avatar_t_stop=avatarStop.stopName;
+  variables().avatar_t_route=avatarStop.routeShortName;
+  variables().avatar_t_heading=avatarStop.tripHeadSign;
 
   console.log(&quot;Time of day is: &quot; + variables().storyTime);
   console.log(&quot;Avatar walking speed is: &quot; + variables().avatar_speed);
   console.log(&quot;Hachi walking speed is: &quot; + variables().hachi_speed);
   console.log(&quot;Avatar closest amenity is: &quot; + variables().avatar_amenity);
   console.log(&quot;Hachi closest amenity is: &quot; + variables().hachi_amenity);
-  console.log(&quot;Avatar closest stop is: &quot; + avatarStop.stopName);
-  console.log(&quot;Avatar heading: &quot; + avatarStop.tripHeadSign);
-  console.log(&quot;Avatar route: &quot; + avatarStop.routeShortName);
-  console.log(&quot;Avatar closest stop is: &quot; + variables().avatar_t_stop);
-  console.log(&quot;Avatar heading: &quot; +  variables().avatar_t_heading);
-  console.log(&quot;Avatar route: &quot; + variables().avatar_t_route);
+  console.log(&quot;Avatar closest stop is: &quot; +  variables().avatar_t_stop;
+  console.log(&quot;Avatar heading: &quot; +   variables().avatar_t_heading);
+  console.log(&quot;Avatar route: &quot; +  variables().avatar_t_route);
 })
 .catch((error) =&gt; {
   console.error(&quot;Error:&quot;, error.message);
